--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 <h1>CubicLease Test</h1>
+
+<form method="GET" action="php/index.php">
+    <label for="username">Username:</label>
+    <input type="text" name="username" id="username" required><br>
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" required minlength="3"><br>
+    <input type="submit" value="Submit">
+</form>
 </body>
 </html>
