made firebase work && added env.js to hold environment variables

--- a/email-password.html
+++ b/email-password.html
@@ -13,7 +13,7 @@ limitations under the License.
 -->
 <html>
 <head>
-    <meta charset=utf-8/>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email/Password Authentication Example</title>
 
@@ -24,15 +24,16 @@ limitations under the License.
 
     <link rel="stylesheet" href="main.css">
 
-    <!-- Import and configure the Firebase SDK -->
-    <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
-    <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
-    <script src="/__/firebase/7.14.4/firebase-app.js"></script>
-    <script src="/__/firebase/7.14.4/firebase-auth.js"></script>
-    <script src="/__/firebase/init.js"></script>
+    <script type="text/javascript" src="env.js"></script>
+
+    <!--    &lt;!&ndash; Import and configure the Firebase SDK &ndash;&gt;-->
+    <!--    &lt;!&ndash; These scripts are made available when the app is served or deployed on Firebase Hosting &ndash;&gt;-->
+    <!--    &lt;!&ndash; If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup &ndash;&gt;-->
+    <!--    <script src="/__/firebase/7.14.4/firebase-app.js"></script>-->
+    <!--    <script src="/__/firebase/7.14.4/firebase-auth.js"></script>-->
+    <!--    <script src="/__/firebase/init.js"></script>-->
 
     <script type="text/javascript">
-
       /**
        * Handles the sign in button press.
        */
@@ -196,21 +197,6 @@ limitations under the License.
         initApp()
       }
     </script>
-
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyDYLTKB_4v189nIUARA132e_SlhlnRAj6c",
-        authDomain: "interviews-a3323.firebaseapp.com",
-        databaseURL: "https://interviews-a3323.firebaseio.com",
-        projectId: "interviews-a3323",
-        storageBucket: "interviews-a3323.appspot.com",
-        messagingSenderId: "746755709117",
-        appId: "1:746755709117:web:14e3f7a927c9d8bae27fd4"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
 </head>
 <body>
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -269,5 +255,34 @@ limitations under the License.
         </div>
     </main>
 </div>
+
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!--<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>-->
+
+<!-- Add Firebase products that you want to use -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/init.js"></script>-->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: APIKEY,
+    authDomain: AUTHDOMAIN,
+    databaseURL: DATABASEURL,
+    projectId: PROJECTID,
+    storageBucket: STORAGEBUCKET,
+    messagingSenderId: MESSAGINGSENDERID,
+    appId: APPID
+  }
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig)
+  // firebase.analytics()
+</script>
 </body>
 </html>
