--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>CubicLease Test</h1>
 
-<form method="GET" action="php/index.php">
+<form method="POST" action="src/php/index.php">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required><br>
     <label for="password">Password:</label>
