--- a/email-password.html
+++ b/email-password.html
@@ -212,6 +212,7 @@ limitations under the License.
 
     <main class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+            <img src="./src/assets/img/Group1.webp" alt="CubicLease logo">
 
             <!-- Container for the demo -->
             <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
